<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/appbgfade"
    tools:context=".Start">

    <TextView
        android:id="@+id/learn_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:text="@string/title_learn"
        android:textColor="?android:attr/colorBackground"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/learn_view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:text="@string/detail_learn"
        android:textColor="?android:attr/colorBackground"
        android:textSize="18sp" />

    <Button
        android:id="@+id/learn_button"
        style="@android:style/Widget.Holo.Button.Toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="193dp"
        android:text="@string/button_learn"
        android:visibility="visible" />

    <TextView
        android:id="@+id/quiz_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="sans-serif"
        android:text="@string/title_quiz"
        android:textColor="?android:attr/colorBackground"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/quiz_view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="229dp"
        android:fontFamily="sans-serif"
        android:text="@string/detail_test"
        android:textColor="?android:attr/colorBackground"
        android:textSize="18sp" />

    <Button
        android:id="@+id/test_button"
        style="@android:style/Widget.Holo.Button.Toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="154dp"
        android:text="@string/button_test"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="?android:attr/colorBackground"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif"
        android:text="@string/title_app"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="?android:attr/colorBackground"
        android:textSize="30sp" />
</RelativeLayout>